# routes/index.js
@@ -7,5 +7,6 @@ const router = express.Router()
 router.post('/grade/pet', gradeController.postPetGrade);
 router.post('/grade/fce', gradeController.postFceGrade);
 router.post('/grade/cae', gradeController.postCaeGrade);
+router.post('/grade/placement-test', gradeController.postPlacementTestGrade);
 
 module.exports = router
